--- a/PRACTICA LLDMQS/HTML/config.html
+++ b/PRACTICA LLDMQS/HTML/config.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRÀCTICA</title>
     <link rel="stylesheet" href="../CSS/style_all.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
-    <div id='configuracio'></div>
     <header id='header'></header>
-    
+    <div id='configuracio'></div><div id='night'></div>
 </body>
 <script src="../SCRIPT/main.js"></script>
+<script src="../SCRIPT/init.js"></script>
 </html>
