--- a/PRACTICA LLDMQS/HTML/index.html
+++ b/PRACTICA LLDMQS/HTML/index.html
@@ -7,25 +7,10 @@
     <link rel="stylesheet" href="../CSS/style_all.css">
 </head>
 <body>
-    <header id='header'>
-        <div id='title'>
-            <h1>PRÀCTICA LLDMQ</h1>
-            <div id='nocturn_mode'>
-                <div id='nocturn_slider'></div>
-                <button id='nocturn_button' onclick="change_to_nocturn_mode()"></button>
-            </div>
-        </div>
-        <nav id='menu'>
-                <a id='menu1' href="index.html">Inici</a>
-                <a id='menu2' href="jocs.html">Jocs</a>
-                <a id='menu3' href="ajuda.html">Ajuda</a>
-                <a id='menu4' href="mapa.html">Mapa</a>
-                <a id='menu5' href="config.html">Configuració</a>
-                <a id='menu6' href="contact.html">Contacte</a>
-        </nav>
-    </header>
-    
+    <header id='header'></header>
     <div id='configuracio'></div><div id='night'></div>
 </body>
 <script src="../SCRIPT/main.js"></script>
+<script src="../SCRIPT/init.js"></script>
+
 </html>
