No se que hi ha nou
o puj per si un cas

--- a/PRACTICA LLDMQS/HTML/index.html
+++ b/PRACTICA LLDMQS/HTML/index.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PRÀCTICA</title>
     <link rel="stylesheet" href="../CSS/style_all.css">
+    <link rel="stylesheet" href="../CSS/styleheader.css">
+
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 <body>
     <header id='header'></header>
     <div id='configuracio'></div><div id='night'></div>
+<main></main>
+
 </body>
+<script src="../SCRIPT/svgses.js"></script>
 <script src="../SCRIPT/main.js"></script>
 <script src="../SCRIPT/init.js"></script>
 
