--- a/PRACTICA LLDMQS/HTML/jocs.html
+++ b/PRACTICA LLDMQS/HTML/jocs.html
@@ -13,4 +13,6 @@
 </body>
 <script src="../SCRIPT/main.js"></script>
 <script src="../SCRIPT/init.js"></script>
+<script src="../SCRIPT/joc.js"></script>
+
 </html>
