--- a/PRACTICA LLDMQS/HTML/jocs.html
+++ b/PRACTICA LLDMQS/HTML/jocs.html
@@ -10,6 +10,10 @@
 <body>
     <header id='header'></header>
     <div id='configuracio'></div><div id='night'></div>
+    <main>
+        <canvas id="main_canvas"></canvas>
+    </main>
+    <button id="xd" onclick="clear()">ENVIAR</button>
 </body>
 <script src="../SCRIPT/main.js"></script>
 <script src="../SCRIPT/init.js"></script>
